refactor: rename docker file
Renaming docker file to "Dockerfile".

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u  "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
       - name: Build Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/shiba-users-service-image:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/shiba-users-service-image:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/shiba-users-service-image:latest
+          
 
 
     
