build: Inject env vars from .env (docker compose)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       context: .
       dockerfile: ./Dockerfile.dev
     container_name: users-service
-    environment:
-      PYTHONPATH: ${PYTHONPATH}
+    env_file:
+        - ./.env
     ports:
       - 8080:80
     volumes:
