--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,13 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+motor==3.6.0
 passlib==1.7.4
 pydantic==2.10.1
 pydantic_core==2.27.1
 Pygments==2.18.0
 PyJWT==2.10.0
+pymongo==4.9.2
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
