--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   mongodb:
     image: mongo:latest
     container_name: mongo-db-service
@@ -7,10 +6,10 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-    ports:
-      - 27017:27017
     volumes:
       - mongodb:/data/db
+    networks:
+        - shiba-network
 
   users-service:
     depends_on:
@@ -18,16 +17,34 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.dev
-    container_name: users-service
     env_file:
         - ./.env
-    ports:
-      - 8080:80
     volumes:
       - type: bind
         source: ./src/
         target: /app/src/
+    networks:
+        - shiba-network
+    deploy:
+      replicas: 7
+    labels:
+        app: users-service
+
+  nginx:
+    depends_on:
+      - users-service
+    image: nginx:latest
+    container_name: nginx-service
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+        - shiba-network
 
 volumes:
-
   mongodb:
+
+networks:
+  shiba-network:
+    driver: bridge 
